# set-plexus

./: .gitignore  Dockerfile  README.md  docker-compose.yml  index.html
backend/app/: main.py  pyproject.toml
frontend/: index.html
