[tool.poetry]
name = "set-plexus-backend"
version = "0.1.0"
description = "SET 게임의 백엔드 서버"
authors = ["Seonhwa <your@email.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
